[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Kliment Mamykin <kmamyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.10"
lazy_static = "1.4.0"
hex = "0.4.0"
graphlib = "0.6.2"